update about page
create relevant components to avoid repetition

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,11 @@
         @apply text-2xl;
         @apply my-4;
     }
+
+    h3 {
+        @apply text-xl;
+        @apply my-4;
+    }
 }
 
 @tailwind components;
